--- a/src/main/resources/META-INF/resources/california-layout/topbar_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/topbar_busdoc.xhtml
@@ -7,7 +7,7 @@
         </h:link>
 
         <a id="menu-button" onclick="openLeftMenu()">
-            <i class="fa fa-align-left" />
+            <i class="fa fa-search" />
         </a>
 
         <a id="right-sidebar-button" href="#">
