--- a/src/main/resources/META-INF/resources/california-layout/template_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/template_busdoc.xhtml
@@ -76,6 +76,7 @@
                     </div>
 
                 </h:form>
+                <ui:include src="/inventory/productsearchdialog.xhtml"/>
             </div>
         </div>
 
