--- a/src/main/resources/META-INF/resources/busdoc/cashmemo.xhtml
+++ b/src/main/resources/META-INF/resources/busdoc/cashmemo.xhtml
@@ -4,7 +4,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:c="http://java.sun.com/jsp/jstl/core"
-                template="/california-layout/template_busdoc.xhtml">
+                template="/california-layout/templatesingle.xhtml">
 
     <ui:define name="title">
         Cash Memo
@@ -32,22 +32,47 @@
     <ui:define name="content">
         <div class="ui-fluid">
             <div class="ui-g">
-                <!-- Left Side -->
-                <div class="ui-g-12 ui-lg-9">
-                    <p:panelGrid columns="4" columnClasses="ui-grid-col-2,ui-grid-col-4,ui-grid-col-2,ui-grid-col-4" layout="grid" 
-                                 styleClass="ui-panelgrid-blank form-group" style="border:0px none; background-color:transparent;">
+                <div class="ui-g-12 ui-lg-12">
+                    <p:panelGrid columns="4" columnClasses="ui-grid-col-2,ui-grid-col-4,ui-grid-col-2,ui-grid-col-4" layout="grid"  >
                         <p:outputLabel value="Dodument No:" for="dno" />
                         <p:inputText id="dno" value="#{busDocController.selected.docno}" disabled="true"/>
 
                         <p:outputLabel value="Date:" for="ddate" />
                         <p:datePicker id="ddate" placeholder="Doc Date" value="#{busDocController.selected.createdon}" showButtonBar="true"/>
 
-
+                        <p:outputLabel for="pcriteria" value="Search Criteria" />
+                        <p:inputText id="pcriteria" placeholder="Criteria" value="#{productSearchController.criteria}" />
+                        <p:commandButton value="Send" actionListener="#{productSearchController.searchProducts()}" update="prodtable"/>
                     </p:panelGrid>
-                </div>
+                    <p:panel>
+                        <p:dataTable id="prodtable" var="prod"
+                                     value="#{productSearchController.productList}" widgetVar="ptable"
+                                     selection="#{productSearchController.selectedProducts}"
+                                     rowKey="#{prod.productid}"
+                                     emptyMessage="No Products found">
+                            <p:column selectionMode="multiple" style="width: 16px; text-align: center"/>
+                            <p:column headerText="Stock#" sortBy="#{prod.productid}">
+                                <h:outputText value="#{prod.productid}" />
+                            </p:column>
 
-                <div class="ui-g-12 ui-lg-3">
-                    <!-- Right Side -->
+                            <p:column headerText="Product" sortBy="#{prod.productname}"
+                                      style="width: 40%">
+                                <h:outputText value="#{prod.productname}" />
+                            </p:column>
+
+                            <p:column headerText="Unit" sortBy="#{prod.unit.unitsym}">
+                                <h:outputText value="#{prod.unit.unitsym}" />
+                            </p:column>
+
+                            <p:column headerText="SupCode" sortBy="#{prod.supplierscode}">
+                                <h:outputText value="#{prod.supplierscode}" />
+                            </p:column>
+
+                            <p:column headerText="Brand" sortBy="#{prod.brand.brandname}">
+                                <h:outputText value="#{prod.brand.brandname}" />
+                            </p:column>
+                        </p:dataTable>
+                    </p:panel>
                 </div>
             </div>
         </div>
@@ -61,6 +86,17 @@
                 return confirmationMessage;
             });
         </script> 
+    </ui:define>
+
+    <ui:define name="history">
+        <div class="ui-fluid">
+            <div class="ui-g">
+                <div class="ui-g-12 ui-lg-12">
+                    <p:panelGrid columns="2" columnClasses="ui-grid-col-4,ui-grid-col-8" layout="grid" style="height: 100%" >
+                    </p:panelGrid>
+                </div>
+            </div>
+        </div>        
     </ui:define>
 
 </ui:composition>
