--- a/src/main/resources/META-INF/resources/busdoc/cashmemo.xhtml
+++ b/src/main/resources/META-INF/resources/busdoc/cashmemo.xhtml
@@ -4,6 +4,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:c="http://java.sun.com/jsp/jstl/core"
+                xmlns:pe="http://primefaces.org/ui/extensions"
                 template="/california-layout/templatesingle.xhtml">
 
     <ui:define name="title">
@@ -39,12 +40,52 @@
 
                         <p:outputLabel value="Date:" for="ddate" />
                         <p:datePicker id="ddate" placeholder="Doc Date" value="#{busDocController.selected.createdon}" showButtonBar="true"/>
+                    </p:panelGrid>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            var myEvent = window.attachEvent || window.addEventListener;
+            var chkevent = window.attachEvent ? 'onbeforeunload' : 'beforeunload'; /// make IE7, IE8 compitable
 
+            myEvent(chkevent, function (e) { // For >=IE7, Chrome, Firefox
+                var confirmationMessage = 'Are you sure to leave the page?';  // a space
+                (e || window.event).returnValue = confirmationMessage;
+                return confirmationMessage;
+            });
+        </script> 
+    </ui:define>
+
+    <ui:define name="history">
+        <h:form id="hostoryform">
+            <div class="ui-fluid">
+                <div class="ui-g">
+                    <div class="ui-g-12 ui-lg-12">
+                        <p:panelGrid columns="2" columnClasses="ui-grid-col-4,ui-grid-col-8" layout="grid" style="height: 100px" >
+                            <p:outputLabel value="Dodument No:" for="dno" />
+                            <p:inputText id="dno" value="#{busDocController.selected.docno}" disabled="true"/>
+
+                            <p:outputLabel value="Date:" for="ddate" />
+                            <p:datePicker id="ddate" placeholder="Doc Date" value="#{busDocController.selected.createdon}" showButtonBar="true"/>
+                        </p:panelGrid>
+                    </div>
+                </div>
+            </div>       
+        </h:form>
+    </ui:define>
+
+    <ui:define name="productsearch">
+        <h:form id="psform">
+            <pe:slideout id="slideoutContact" title="Products" icon="fa fa-search" location="top" widgetVar="slideout" 
+                         handleStyleClass="product-handle" panelStyleClass="product-panel" offset="230px" bounceTimes="5"
+                         bounceDistance="100px">
+                <p:panel >
+                    <p:panelGrid columns="4" columnClasses="ui-grid-col-2,ui-grid-col-4,ui-grid-col-2,ui-grid-col-4" layout="grid"  >
                         <p:outputLabel for="pcriteria" value="Search Criteria" />
                         <p:inputText id="pcriteria" placeholder="Criteria" value="#{productSearchController.criteria}" />
                         <p:commandButton value="Send" actionListener="#{productSearchController.searchProducts()}" update="prodtable"/>
                     </p:panelGrid>
-                    <p:panel>
+                    <p:panel styleClass="slide-product-panel">
                         <p:dataTable id="prodtable" var="prod"
                                      value="#{productSearchController.productList}" widgetVar="ptable"
                                      selection="#{productSearchController.selectedProducts}"
@@ -73,30 +114,9 @@
                             </p:column>
                         </p:dataTable>
                     </p:panel>
-                </div>
-            </div>
-        </div>
-        <script type="text/javascript">
-            var myEvent = window.attachEvent || window.addEventListener;
-            var chkevent = window.attachEvent ? 'onbeforeunload' : 'beforeunload'; /// make IE7, IE8 compitable
-
-            myEvent(chkevent, function (e) { // For >=IE7, Chrome, Firefox
-                var confirmationMessage = 'Are you sure to leave the page?';  // a space
-                (e || window.event).returnValue = confirmationMessage;
-                return confirmationMessage;
-            });
-        </script> 
-    </ui:define>
-
-    <ui:define name="history">
-        <div class="ui-fluid">
-            <div class="ui-g">
-                <div class="ui-g-12 ui-lg-12">
-                    <p:panelGrid columns="2" columnClasses="ui-grid-col-4,ui-grid-col-8" layout="grid" style="height: 100%" >
-                    </p:panelGrid>
-                </div>
-            </div>
-        </div>        
+                </p:panel>
+            </pe:slideout>
+        </h:form>
     </ui:define>
 
 </ui:composition>
