--- a/src/main/resources/META-INF/resources/company/company.xhtml
+++ b/src/main/resources/META-INF/resources/company/company.xhtml
@@ -45,20 +45,20 @@
 
                 <p:spacer height="10 px" />
 
-                <p:panel id="companydetails" header="#{companyController.companyHeader}">
+                <p:panel id="companydetails" header="#{companyController.companyHeader}" rendered="#{companyController.selectedCompany ne null}">
                     <f:facet name="actions">
                          <p:commandButton styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
-                                          rendered="#{companyController.selectedCompany ne null}" process="@form"
-                                        actionListener="#{companyController.saveCompany()}"
-                                        update=":mainform:tabsview:comtable" icon="fa fa-save" />
+                                          immediate="true"
+                                          actionListener="#{companyController.saveCompany()}"
+                                        update="@widgetVar(comtable), :growl" icon="fa fa-save" />
                     </f:facet>
                     <p:panelGrid columns="2" columnClasses="ui-grid-col-3,ui-grid-col-9" layout="grid" 
                                  styleClass="ui-panelgrid-blank form-group" style="border:0px none; background-color:transparent;">
                         <p:outputLabel value="Company Id:" for="cno" />
                         <p:inputText id="cno" value="#{companyController.selectedCompany.companyid}" disabled="true" style="width: 100% !important"/>
 
-                        <p:outputLabel value="Name:" for="name" />
-                        <p:inputText id="name" placeholder="Name" value="#{companyController.selectedCompany.companyname}" style="width: 100% !important"/>
+                        <p:outputLabel value="Name:" for="cname" />
+                        <p:inputText id="cname" placeholder="Company Name" value="#{companyController.selectedCompany.companyname}" style="width: 100% !important"/>
 
                         <p:outputLabel value="CR No:" for="crno" />
                         <p:inputText id="crno" placeholder="CR No" value="#{companyController.selectedCompany.crno}" style="width: 100% !important"/>
