--- a/src/main/resources/META-INF/resources/inventory/prodmaster.xhtml
+++ b/src/main/resources/META-INF/resources/inventory/prodmaster.xhtml
@@ -2,78 +2,91 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                template="/california-layout/template.xhtml">
+    <ui:define name="title">
+        Product Master
+    </ui:define>
 
-    <div class="ui-g">
-        <div class="ui-g-12">
-            <p:toolbar id="toolbar">
-                <f:facet name="left">
-                    <p:commandButton title="New Category" icon="fa fa-plus" 
-                                     disabled="#{productTreeViewController.newCategoryDisabled}"/>
-                    <p:commandButton title="Edit Category" icon="fa fa-pencil"
-                                     disabled="#{productTreeViewController.editCategoryDisabled}"/>
-                    <p:commandButton title="Refresh Category Tree" icon="fa fa-refresh"
-                                     actionListener="#{productTreeViewController.refreshCategoryTree()}"
-                                     update="cattree"/>
-                </f:facet>
+    <ui:define name="breadcrumb">
+        Product Master
+    </ui:define>
 
-                <f:facet name="right">
-                    <p:commandButton title="New Product" icon="fa fa-plus" process="@this" 
-                                     actionListener="#{productTreeViewController.newTab_In_newBtab()}"
-                                     disabled="#{productTreeViewController.productNewDisabled}" 
-                                     update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                    <p:commandButton title="Edit Product" icon="fa fa-pencil" 
-                                     disabled="#{productTreeViewController.productEditDisabled}" 
-                                     actionListener="#{productTreeViewController.editTab_In_newBtab()}"
-                                     update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                    <p:commandButton title="Duplicate" icon="fa fa-clone" disabled="#{productTreeViewController.productEditDisabled}" 
-                                     actionListener="#{productTreeViewController.cloneTab_In_newBtab()}"
-                                     update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                    <p:commandButton title="Refresh Products" icon="fa fa-refresh" update="prodtable"
-                                     actionListener="#{productTreeViewController.refreshProductList()}"/>
-                </f:facet>
-            </p:toolbar>
-        </div>
-        <div class="ui-g-3">
-            <p:tree id="cattree" value="#{productTreeViewController.root}" var="node" dynamic="true"
-                    style="width:100%; height:100%;" selectionMode="single"
-                    selection="#{productTreeViewController.selectedNode}">
-                <p:ajax event="select" update="@widgetVar(ptable), :mainform:tabsview:toolbar"
-                        listener="#{productTreeViewController.onNodeSelect}" />
-                <p:treeNode expandedIcon="pi pi-folder-open"
-                            collapsedIcon="pi pi-folder">
-                    <h:outputText value="#{node}" />
-                </p:treeNode>
-            </p:tree>
-        </div>
-        <div class="ui-g-9">
-            <p:dataTable id="prodtable" var="prod"
-                         value="#{productTreeViewController.prodList}" widgetVar="ptable"
-                         selection="#{productTreeViewController.selectedProduct}"
-                         selectionMode="single" rowKey="#{prod.productid}"
-                         emptyMessage="No Products found">
-                <p:ajax event="rowSelect" update=":mainform:tabsview:toolbar" />
-                <p:column headerText="Stock No" sortBy="#{prod.productid}"
-                          filterBy="#{prod.productid}" filterMatchMode="contains">
-                    <h:outputText value="#{prod.productid}" />
-                </p:column>
+    <ui:define name="content">
+        <h:form id="mainform">
+            <div class="ui-g">
+                <div class="ui-g-12">
+                    <p:toolbar id="toolbar">
+                        <f:facet name="left">
+                            <p:commandButton title="New Category" icon="fa fa-plus" 
+                                             disabled="#{productTreeViewController.newCategoryDisabled}"/>
+                            <p:commandButton title="Edit Category" icon="fa fa-pencil"
+                                             disabled="#{productTreeViewController.editCategoryDisabled}"/>
+                            <p:commandButton title="Refresh Category Tree" icon="fa fa-refresh"
+                                             actionListener="#{productTreeViewController.refreshCategoryTree()}"
+                                             update="cattree"/>
+                        </f:facet>
 
-                <p:column headerText="Product Name" sortBy="#{prod.productname}"
-                          filterBy="#{prod.productname}" filterMatchMode="contains"
-                          style="width: 50%">
-                    <h:outputText value="#{prod.productname}" />
-                </p:column>
+                        <f:facet name="right">
+                            <p:commandButton title="New Product" icon="fa fa-plus" process="@this" 
+                                             actionListener="#{productTreeViewController.newTab_In_newBtab()}"
+                                             disabled="#{productTreeViewController.productNewDisabled}" 
+                                             update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
+                            <p:commandButton title="Edit Product" icon="fa fa-pencil" 
+                                             disabled="#{productTreeViewController.productEditDisabled}" 
+                                             actionListener="#{productTreeViewController.editTab_In_newBtab()}"
+                                             update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
+                            <p:commandButton title="Duplicate" icon="fa fa-clone" disabled="#{productTreeViewController.productEditDisabled}" 
+                                             actionListener="#{productTreeViewController.cloneTab_In_newBtab()}"
+                                             update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
+                            <p:commandButton title="Refresh Products" icon="fa fa-refresh" update="prodtable"
+                                             actionListener="#{productTreeViewController.refreshProductList()}"/>
+                        </f:facet>
+                    </p:toolbar>
+                </div>
+                <div class="ui-g-3">
+                    <p:tree id="cattree" value="#{productTreeViewController.root}" var="node" dynamic="true"
+                            style="width:100%; height:100%;" selectionMode="single"
+                            selection="#{productTreeViewController.selectedNode}">
+                        <p:ajax event="select" update="@widgetVar(ptable), :mainform:toolbar"
+                                listener="#{productTreeViewController.onNodeSelect}" />
+                        <p:treeNode expandedIcon="pi pi-folder-open"
+                                    collapsedIcon="pi pi-folder">
+                            <h:outputText value="#{node}" />
+                        </p:treeNode>
+                    </p:tree>
+                </div>
+                <div class="ui-g-9">
+                    <p:dataTable id="prodtable" var="prod"
+                                 value="#{productTreeViewController.prodList}" widgetVar="ptable"
+                                 selection="#{productTreeViewController.selectedProduct}"
+                                 selectionMode="single" rowKey="#{prod.productid}"
+                                 emptyMessage="No Products found">
+                        <p:ajax event="rowSelect" update=":mainform:toolbar" />
+                        <p:column headerText="Stock No" sortBy="#{prod.productid}"
+                                  filterBy="#{prod.productid}" filterMatchMode="contains">
+                            <h:outputText value="#{prod.productid}" />
+                        </p:column>
 
-                <p:column headerText="Sup Code" sortBy="#{prod.supplierscode}"
-                          filterBy="#{prod.supplierscode}" filterMatchMode="contains">
-                    <h:outputText value="#{prod.supplierscode}" />
-                </p:column>
+                        <p:column headerText="Product Name" sortBy="#{prod.productname}"
+                                  filterBy="#{prod.productname}" filterMatchMode="contains"
+                                  style="width: 50%">
+                            <h:outputText value="#{prod.productname}" />
+                        </p:column>
 
-                <p:column headerText="Brand" sortBy="#{prod.brand.brandname}"
-                          filterBy="#{prod.brand.brandname}" filterMatchMode="contains">
-                    <h:outputText value="#{prod.brand.brandname}" />
-                </p:column>
-            </p:dataTable>
-        </div>
-    </div>
+                        <p:column headerText="Sup Code" sortBy="#{prod.supplierscode}"
+                                  filterBy="#{prod.supplierscode}" filterMatchMode="contains">
+                            <h:outputText value="#{prod.supplierscode}" />
+                        </p:column>
+
+                        <p:column headerText="Brand" sortBy="#{prod.brand.brandname}"
+                                  filterBy="#{prod.brand.brandname}" filterMatchMode="contains">
+                            <h:outputText value="#{prod.brand.brandname}" />
+                        </p:column>
+                    </p:dataTable>
+                </div>
+            </div>
+        </h:form>
+    </ui:define>
+
 </ui:composition>
